[MM-23663] Fixed z-index ordering of webview vs. error page

--- a/src/browser/css/components/MattermostView.css
+++ b/src/browser/css/components/MattermostView.css
@@ -19,6 +19,10 @@
   z-index: -1;
 }
 
+.mattermostView-error webview {
+  z-index: -1;
+}
+
 .mattermostView-loadingScreen {
   vertical-align: middle;
   background: white;
